Updated parallelism-friendly erasure-coding def.

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -121,7 +121,8 @@
 \begin{description}
   \item[$\mathcal{A}(\dots)$] The Merkle mountain range append function. See equation \ref{eq:mmrappend}.
   \item[$\mathcal{B}_n(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
-  \item[$\mathcal{C}_n(\dots)$] The erasure coding function for $n$ chunks. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:erasurecoding}.
+  \item[$\mathcal{C}(\dots)$] The group of erasure-coding functions.
+  \item[$\mathcal{C}_n(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
 %  \item[$\mathcal{D}$] Unused.
   \item[$\se(\dots)$] The \textsc{scale} encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
   \item[$\mathcal{F}(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
@@ -135,10 +136,10 @@
   \item[$\mathcal{M}_S(\dots)$] The binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\mathcal{M}_S(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   \item[$\mathcal{N}(\dots)$] The erasure-coding chunks function. See appendix \ref{sec:erasurecoding}.
-  %\item[$\mathcal{O}$] Unused.
+  \item[$\mathcal{O}(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\mathcal{P}_n(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
   \item[$\mathcal{Q}(\dots)$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
-  \item[$\mathcal{R}(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+  \item[$\mathcal{R}$] The group of erasure-coding piece-recovery functions.
   \item[$\mathcal{S}_k(\dots)$] The general signature function. See section \ref{sec:cryptography}.
   \item[$\mathcal{T}$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
   \item[$\mathcal{U}(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
