--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -3,9 +3,17 @@
 \newcommand{\join}{\text{join}}
 \newcommand{\spl}{\text{split}}
 
-We assume a piece-encode function $E_{piece}: \Y_{2048} \to \seq{\Y_6}_{1024}$ and decode function $E^{-1}_{piece}: \seq{\Y_6}_{342} \to \Y_{2048}$. This is a Reed-Solomon erasure codec with a rate of 1:3 and basis as defined by \cite{lin2014novel}. For our 1,023 validators, we use a message size of $n=1024$ to take advantage of a suitable FFT for fast encoding (\ie $2^{10}$).
+The foundation of the data-availability and distribution system of \Jam is a systematic Reed-Solomon erasure coding function in \textsc{gf}(16) of rate 342:1026, as defined by \cite{lin2014novel}. We use a little-endian $\Y_2$ form of the 16-bit \textsc{gf} points with a functional equivalence given by $\se_2$. From this we may assume the encoding function $\mathbf{C}: \seq{\Y_2}_{342} \to \seq{\Y_2}_{1026}$ and the recovery function $\mathcal{R}: \{\tuple(\Y_2, \N_{1026})\}_{342} \to \seq{\Y_2}_{342}$. Encoding is done by extrapolating a data blob of size 684 octets (provided in $\mathbf{C}$ here as 342 octet pairs) into 2,052 octets (1,026 octet pairs). Recovery is done by collecting together any distinct 342 octet pairs, together with their indices and transforming this into the original sequence of 342 octet pairs.
 
-We assume some data blob $\mathbf{d} \in \Y_{2048\cdot k}, k \in \N$. We are able to express this as a whole number of $k$ pieces each of a sequence of 2,048 octets. We denote these pieces $\mathbf{p} \in \seq{\Y_{2048}} = \spl_{2048}(\mathbf{p})$. Each piece is then split into 1,024 chunks each a six octet sequence. The resulting matrix of chunks is grouped by its index in its piece and concatenated to form 1,024 super-chunks, made up of many six octet subsequences one from each piece. Any 342 of these super-chunks may then be used to reconstruct the original data $\mathbf{d}$.
+Practically speaking, this allows for the efficient encoding and recovery of data whose size is a multiple of 684 octets. Data whose length is not divisible by 684 must be padded (we pad with zeroes). We use this erasure-coding in two contexts within the \Jam protocol; one where we encode variable sized (but typically very large) data blobs for the Audit DA and block-distribution system, and the other where we encode much smaller fixed-size data \emph{segments} for the Import DA system.
+
+For the Import DA system, we deal with an input size of 4,104 octets resulting in data-parallelism of order six. We may attain a greater degree of data parallelism if encoding or recovering more than one segment at a time though for recovery, we may be restricted to the requiring each segment to be formed from the same set of indices (depending on the specific algorithm).
+
+\subsection{Blob Encoding and Recovery}
+
+We assume some data blob $\mathbf{d} \in \Y_{684k}, k \in \N$. We are able to express this as a whole number of $k$ pieces each of a sequence of 684 octets. We denote these (data-parallel) pieces $\mathbf{p} \in \seq{\Y_{684}} = \spl_{684}(\mathbf{p})$. Each piece is then reformed as 342 octet pairs and erasure-coded using $C$ as above to give 1,026 octet pairs per piece.
+
+The resulting matrix is grouped by its pair-index and concatenated to form 1,026 \emph{chunks}, each of $k$ octet-pairs. Any 342 of these chunks may then be used to reconstruct the original data $\mathbf{d}$.
 
 Formally we begin by defining two utility functions for splitting some large sequence into a number of equal-sized sub-sequences and for joining subsequences back into a single large sequence:
 \begin{align}
@@ -18,23 +26,27 @@ We define the transposition operator hence:
   {}^\text{T}[[\mathbf{x}_{0, 0}, \mathbf{x}_{0, 1}, \mathbf{x}_{0, 2}, \dots], [\mathbf{x}_{1, 0}, \mathbf{x}_{1, 1}, \dots], \dots] \equiv [[\mathbf{x}_{0, 0}, \mathbf{x}_{1, 0}, \mathbf{x}_{2, 0}, \dots], [\mathbf{x}_{0, 1}, \mathbf{x}_{1, 1}, \dots], \dots]
 \end{equation}
 
-We may then define our erasure-code chunking function which accepts an arbitrary sized data blob whose length divides wholly into 2,048 octets and results in 1,024 sequences of sequences each of smaller blobs:
+We may then define our erasure-code chunking function which accepts an arbitrary sized data blob whose length divides wholly into 684 octets and results in 1,026 sequences of sequences each of smaller blobs:
 \begin{equation}\label{eq:erasurecoding}
-  \forall k \in \N : \mathcal{C}\colon\left\{\begin{aligned}
-    \Y_{2048\cdot k} &\to \seq{\Y_{6k}}_{1024} \\
-    \mathbf{d} &\mapsto [ \join(\mathbf{c}) \mid \mathbf{c} \orderedin {}^{\text{T}}[E_{piece}(\mathbf{p}) \mid \mathbf{p} \orderedin \text{split}_{2048}(\mathbf{d})] ]
+  \mathcal{C}_{k \in \N}\colon\left\{\begin{aligned}
+    \Y_{684k} &\to \seq{\Y_{2k}}_{1026} \\
+    \mathbf{d} &\mapsto [ \join(\mathbf{c}) \mid \mathbf{c} \orderedin {}^{\text{T}}[\mathcal{C}(\mathbf{p}) \mid \mathbf{p} \orderedin \text{split}_{684}(\mathbf{d})] ]
   \end{aligned}\right.
 \end{equation}
 
-It may be inverted with only one-third-plus-one of the items of its result (\ie 342) needed to rebuild the original blob:
+The original data may be reconstructed with only 342 of the 1,026 items of said function's result, together with the items' respective indices:
 \begin{equation}\label{eq:erasurecodinginv}
-  \forall k \in \N : \mathcal{C}^{-1}\colon\left\{\begin{aligned}
-    \seq{\Y_{6k}}_{342} &\to \Y_{2048\cdot k} \\
-    \mathbf{c} &\mapsto \join([ E^{-1}_{piece}(x) \mid \mathbf{x} \orderedin \transpose[ \spl_6(\mathbf{x}) \mid \mathbf{x} \orderedin \mathbf{c}] ])
+  \mathcal{R}_{k \in \N}\colon\left\{\begin{aligned}
+    \{(\Y_{2k}, \N_{1026})\}_{342} &\to \Y_{684k} \\
+    \mathbf{c} &\mapsto \join([
+      \mathcal{R}([(\spl_2(\mathbf{x})_p, i) \mid (\mathbf{x}, i) \orderedin \mathbf{c}])
+      \mid p \in \N_k
+    ])
+%      [ \mathcal{R}(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose[ \spl_2(\mathbf{x}) \mid (\mathbf{x}, i) \orderedin \mathbf{c}] ]
   \end{aligned}\right.
 \end{equation}
 
-
+Segment encoding is just this with $k = 6$.
 
 
 %To ensure the availability of work-package data in an adversarial environment, we use a Reed-Solomon code over the field $GF(2^{16})$ with rate of three to get a three times redundant data to be distributed among validators. This ensures that one-third of the validators may be dishonest or malfunctioning and yet any party is still able to reconstruct a work-package once we are assured that two-thirds-plus-one of the validators have each received their set of chunks for said work-package.
