Add import host call

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -113,6 +113,8 @@
     \item[$\Omega_U$] Upgrade-service host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
+    \item[$\Omega_Y$] Import segment host-call.
+    \item[$\Omega_Z$] Export segment host-call.
   \end{description}
 \end{description}
 
