--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -153,8 +153,8 @@ The third and forth definition are helper terms for this, with the third perform
 
 The above relies on two functions, $M$ and $X$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $i$:
 \begin{align*}
-  M(i) &= [\overline{\mathbf{s}}[j] \mid (\mathcal{M}(\overline{\mathbf{s}}), j) \orderedin i_\mathbf{i}, i] \\
-  X(i) &= [\mathbf{s} \mid \mathcal{H}(\mathbf{s}) \orderedin i_\mathbf{x}]
+  M(i \in \mathbb{I}) &\equiv [\overline{\mathbf{s}}[j] \mid (\mathcal{M}(\overline{\mathbf{s}}), j) \orderedin i_\mathbf{i}] \\
+  X(i \in \mathbb{I}) &\equiv [\mathbf{s} \mid \mathcal{H}(\mathbf{s}) \orderedin i_\mathbf{x}]
 \end{align*}
 
 Meanwhile $s$ is defined as the data specification of the package, using the ``segments-root'' function $A$ and drawing upon $M$, the imports-lookup function and $X$, the extrinsic data lookup function:
