--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -71,14 +71,14 @@ The Refine invocation function also implicitly draws upon some recent head state
   \Psi_R &\colon \left\{\begin{aligned}
     \left(\begin{aligned}
       &\H, \N_G, \N_S, \H, \Y, \mathbb{X},\\
-      &\H, \Y, \seq{\G}, \seq{\G}, \N
+      &\H, \Y, \seq{\G}, \seq{\Y}, \N
     \end{aligned}
     \right) &\to (\Y \cup \mathbb{J}, \seq{\Y}) \\
     (c, g, s, p, \mathbf{y}, \mathbf{c}, a, \mathbf{o}, \mathbf{i}, \mathbf{x}, \ell) &\mapsto \begin{cases}
       (\token{BAD}, []) &\when s \not\in \keys{\delta} \vee \Lambda(\delta[s], \mathbf{c}_t, c) = \none \\
       (\token{BIG}, []) &\otherwhen |\Lambda(\delta[s], \mathbf{c}_t, c)| > \mathsf{S} \\
       &\otherwise: \\
-      &\quad\using a = \mathcal{E}(s, p, \mathbf{y}, \mathbf{c}, a, \mathbf{o}, \var{\mathbf{i}}, \var{\mathbf{x}})\ ,\\
+      &\quad\using a = \se(s, p, \mathbf{y}, \mathbf{c}, a, \mathbf{o}, \var{\mathbf{x}})\ ,\\
       &\quad\also (\mathbf{r}, (\mathbf{m}, \mathbf{e})) = \Psi_M(\Lambda(\delta[s], \mathbf{c}_t, c), 1, g, a, F, (\emptyset, []))\ \colon\\
       (\mathbf{r}, []) &\quad\when \mathbf{r} \in \{ \oog, \panic \}  \\
       (\mathbf{u}, \mathbf{e}) &\quad\when \mathbf{r} = \tup{g, \mathbf{u}} \\
@@ -89,6 +89,7 @@ The Refine invocation function also implicitly draws upon some recent head state
     (\N, \N_G, \seq{\N_R}_6, \mathbb{M}, (\dict{\N}{\pvm}, \seq{\Y})) &\to (\N_G, \seq{\N_R}_2, \mathbb{M}, (\dict{\N}{\pvm}, \seq{\Y}))\\
     (n, \xi, \omega, \mu, (\mathbf{m}, \mathbf{e})) &\mapsto \begin{cases}
       \Omega_H(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), s, \delta, \mathbf{c}_t) &\when n = \mathtt{lookup}\\
+      \Omega_Y(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \mathbf{i}) &\when n = \mathtt{import}\\
       \Omega_Z(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \ell) &\when n = \mathtt{export}\\
       \Omega_G(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e})) &\when n = \mathtt{gas}\\
       \Omega_M(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e})) &\when n = \mathtt{machine}\\
@@ -637,8 +638,29 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
+  $\Omega_Y(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \mathbf{i})$ \\
+  \texttt{import} = 15 \\
+  $g = 10$} &
+  $\begin{aligned}
+    \using \mathbf{v} &= \begin{cases}
+      \mathbf{i}_{\omega_0} &\when \omega_0 < |\mathbf{i}| \\
+      \none &\otherwise
+    \end{cases} \\
+    \using o &= \omega_{1..3} \\
+    \mu'_{o\dots+\mathsf{W}_C\mathsf{W}_S} &\equiv \begin{cases}
+      \mathbf{v} & \when \mathbf{v} \ne \none \wedge \mathbb{N}_{o \dots+ \mathsf{W}_C\mathsf{W}_S} \subset \mathbb{V}^*_{\mu} \\
+      \mu_{o\dots+\mathsf{W}_C\mathsf{W}_S} & \otherwise
+    \end{cases} \\
+    \omega'_0 &\equiv \begin{cases}
+      \mathtt{OOB} &\when \mathbb{Z}_{o \dots+ \mathsf{W}_C\mathsf{W}_S} \not\subset \mathbb{V}^*_{\mu} \\
+      \mathtt{NONE} & \otherwhen \mathbf{v} = \none \\
+      \mathtt{OK} &\otherwise \\
+    \end{cases}
+  \end{aligned}$\\
+  \cmidrule(lr){1-1}\cmidrule(lr){2-2}
+  \makecell*[l]{
   $\Omega_Z(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \ell)$ \\
-  \texttt{export} = 15 \\
+  \texttt{export} = 16 \\
   $g = 10$} &
   $\begin{aligned}
     \using [o, z] &= \omega_{0\dots2} \\
@@ -655,7 +677,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_M(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{machine} = 16 \\
+  \texttt{machine} = 17 \\
   $g = 10$} &
   $\begin{aligned}
     \using [p_o, p_z, i] &= \omega_{0 \dots 3} \\
@@ -673,7 +695,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_P(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{peek} = 17 \\
+  \texttt{peek} = 18 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, a, b, l] &= \omega_{0 \dots 4} \\
@@ -691,7 +713,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_O(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{poke} = 18 \\
+  \texttt{poke} = 19 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, a, b, l] &= \omega_{0 \dots 4} \\
@@ -716,7 +738,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_K(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{invoke} = 19 \\
+  \texttt{invoke} = 20 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, o] &= \omega_{0 \dots 2} \\
@@ -745,7 +767,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_X(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{expunge} = 20 \\
+  \texttt{expunge} = 21 \\
   $g = 10$} &
   $\begin{aligned}
     \using n &= \omega_{0} \\
