--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -8,11 +8,9 @@ To achieve this, Safrole limits the possible author of any block within any give
 
 Because of its tightly scoped role, the core of Safrole's state, $\gamma$, is independent of the rest of the protocol. It interacts with other portions of the protocol through $\iota$ and $\kappa$, the prospective and active sets of validator keys respectively; $\tau$, the most recent block's timeslot; and $\eta$, the entropy accumulator.
 
-%The basis of the Safrole algorithm is to subdivide time following Genesis into fixed length \emph{epoch}s, and then each such epoch into a whole number of 600 ($\mathsf{E}$) \emph{timeslots} (aka \emph{slots}) of uniform length six seconds ($\mathsf{P}$). One epoch therefore equates to exactly one hour, with ten slots occuring per minute. -- ALREADY MENTIONED ABOVE?
+The Safrole protocol generates, once per epoch, a sequence of $\mathsf{E}$ \emph{tickets}, one for each potential block within a whole epoch. Each \emph{ticket} is in fact a pseudonym for some validator which was agreed the privilege of authoring a block in the corresponding timeslot. Each block header includes its timeslot index $\mathbf{H}_t$ (the number of six-second periods since the \Jam Common Era began) and a valid seal signature $\mathbf{H}_s$, signed by the validator sealing key corresponding to the timeslot within the aforementioned sequence.
 
-The Safrole protocol generates, once per epoch, a sequence of $\mathsf{E}$ \emph{sealing keys}, one for each potential block within a whole epoch. Each block header includes its timeslot index $\mathbf{H}_t$ (the number of six-second periods since the \Jam Common Era began) and a valid seal signature $\mathbf{H}_s$, signed by the sealing key corresponding to the timeslot within the aforementioned sequence. Each sealing key is in fact a pseudonym for some validator which was agreed the privilege of authoring a block in the corresponding timeslot.
-
-In order to generate this sequence of sealing keys, and in particular to do so without making public the correspondence relation between them and the validator set, we use a novel cryptographic structure known as a Ring\textsc{vrf}, utilizing the Bandersnatch curve. Bandersnatch Ring\textsc{vrf} allows for a proof to be provided which simultaneously guarantees the author controlled a key within a set (in our case validators), and secondly provides an output, an unbiasable deterministic hash giving us a secure verifiable random function (\textsc{vrf}) and as a means of determining which validators are able to author in which slots.
+In order to generate this sequence of \emph{tickets}, and in particular to do so without making public the correspondence relation between them and the validator set, we use a novel cryptographic structure known as a Ring\textsc{vrf}, utilizing the Bandersnatch curve. Bandersnatch Ring\textsc{vrf} allows for a proof to be provided which simultaneously guarantees the author controlled a key within a set (in our case validators), and secondly provides an output, an unbiasable deterministic hash giving us a secure verifiable random function (\textsc{vrf}) and as a means of determining which validators are able to author in which slots.
 
 
 
@@ -177,7 +175,7 @@ The posterior slot key sequence $\gamma'_\mathbf{s}$ is one of three expressions
   \end{cases}
 \end{align}
 
-Here, we use $Z$ as the inside-out sequencer function, defined as follows:
+Here, we use $Z$ as the outside-in sequencer function, defined as follows:
 \begin{equation}
   Z\colon\left\{\,\begin{aligned}
     \seq{\mathbb{C}}_\mathsf{E} &\to \seq{\mathbb{C}}_\mathsf{E}\\
