Tickets generation signing context required to be equal to primary sealing context to generate the same output

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -278,8 +278,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{X}_F = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
   \item[$\mathsf{X}_G = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
   \item[$\mathsf{X}_I = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
-  \item[$\mathsf{X}_S = \token{\$jam\_seal}$] \emph{Bandersnatch} Regular block seal.
-  \item[$\mathsf{X}_T = \token{\$jam\_ticket}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation.
+  \item[$\mathsf{X}_T = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal.
   \item[$\mathsf{X}_U = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy.
   \item[$\mathsf{X}_\top = \token{\$jam\_valid}$] \emph{Ed25519} Judgements for valid work-reports.
   \item[$\mathsf{X}_\bot = \token{\$jam\_invalid}$] \emph{Ed25519} Judgements for invalid work-reports.
