--- a/preamble.tex
+++ b/preamble.tex
@@ -136,7 +136,7 @@
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.0 - \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.0 - \today}}
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.0 Tokyo - \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.0 Tokyo - \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
