--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -262,7 +262,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{V} = 1023$] The total number of validators.
   \item[$\mathsf{W}_C = 684$] The basic size of our erasure-coded pieces. See equation \ref{eq:erasurecoding}.
   \item[$\mathsf{W}_M = 2^{11}$] The maximum number of entries in a work-package manifest.
-  \item[$\mathsf{W}_P = 15\cdot2^{20}$] The maximum size of an encoded work-package together with its import implications, in octets.
+  \item[$\mathsf{W}_P = 12\cdot2^{20}$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
   \item[$\mathsf{W}_R = 96\cdot2^{10}$] The maximum size of an encoded work-report in octets.
   \item[$\mathsf{W}_S = 6$] The size of an exported segment in erasure-coded pieces.
   \item[$\mathsf{X}$] Context strings, see below.
