--- a/text/ack.tex
+++ b/text/ack.tex
@@ -1,6 +1,6 @@
 \section{Acknowledgements}
 
-Much of this present work is based in large part on the work of others. The Web3 Foundation research team and in particular Alistair Stewart and Jeff Burdges are responsible for \textsc{Elves}, the security apparatus of Polkadot which enables the possibility of in-core computation for \Jam. The same team is responsible for Sassafras, \textsc{Grandpa} and \textsc{Beefy}.    
+Much of this present work is based in large part on the work of others. The Web3 Foundation research team and in particular Alistair Stewart and Jeff Burdges are responsible for \textsc{Elves}, the security apparatus of Polkadot which enables the possibility of in-core computation for \Jam. The same team is responsible for Sassafras, \textsc{Grandpa} and \textsc{Beefy}.
 
 Safrole is a mild simplification of Sassafras and was made under the careful review of Davide Galassi and Alistair Stewart.
 
@@ -9,5 +9,7 @@ The original CoreJam \textsc{rfc} was refined under the review of Bastian Köche
 The \textsc{pvm} is a formalization of a partially simplified \emph{PolkaVM} software prototype, developed by Jan Bujak. Cyrill Leutwiler contributed to the empirical analysis of the \textsc{pvm} reported in the present work.
 
 The \emph{PolkaJam} team and in particular Arkadiy Paronyan, Emeric Chevalier and Dave Emmet have been instrumental in the design of the lower-level aspects of the \Jam protocol, especially concerning Merklization and \textsc{i/o}.
+
+Numerous contributors to the repository since publication have helped correct errors. Thank you to all.
 
 And, of course, thanks to the awesome Lemon Jelly, a.k.a. Fred Deakin and Nick Franglen, for three of the most beautiful albums ever produced, the cover art of the first of which was inspiration for this paper's background art.
