--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -113,6 +113,8 @@
     \item[$\Omega_U$] Upgrade-service host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
+    \item[$\Omega_Y$] Import segment host-call.
+    \item[$\Omega_Z$] Export segment host-call.
   \end{description}
 \end{description}
 
@@ -258,10 +260,11 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{S} = 4,000,000$] The maximum size of service code in octets.
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
   \item[$\mathsf{V} = 1023$] The total number of validators.
+  \item[$\mathsf{W}_C = 684$] The basic size of our erasure-coded pieces. See equation \ref{eq:erasurecoding}.
   \item[$\mathsf{W}_M = 2^{11}$] The maximum number of entries in a work-package manifest.
-  \item[$\mathsf{W}_P = 15\cdot2^{20}$] The maximum size of an encoded work-package together with its import implications, in octets.
+  \item[$\mathsf{W}_P = 12\cdot2^{20}$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
   \item[$\mathsf{W}_R = 96\cdot2^{10}$] The maximum size of an encoded work-report in octets.
-  \item[$\mathsf{W}_S = 2^{12}$] The size of a distributed-availability segment in octets.
+  \item[$\mathsf{W}_S = 6$] The size of an exported segment in erasure-coded pieces.
   \item[$\mathsf{X}$] Context strings, see below.
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 4$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
