Eprint link for ELVES

--- a/biblio.bib
+++ b/biblio.bib
@@ -242,9 +242,12 @@
 }
 
 @article{stewart2018efficient,
-    title={Efficient Block-Auditing for Blockchains},
-    author={Alistair Stewart},
-    year={2018},
+    author = {Jeff Burdges and Alfonso Cevallos and Handan Kılınç Alper and Chen-Da Liu-Zhang and Fatemeh Shirazi and Alistair Stewart and Rob Habermeier and Robert Klotzner and Andronik Ordian},
+    title = {Efficient Execution Auditing for Blockchains under Byzantine Assumptions},
+    howpublished = {Cryptology ePrint Archive, Paper 2024/961},
+    year = {2024},
+    note = {\url{https://eprint.iacr.org/2024/961}},
+    url = {https://eprint.iacr.org/2024/961}
 }
 
 @inproceedings{bertoni2013keccak,
